# pdf_speech_search

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
pdf_speech_search/: asr_models.py  indexing.py  models.py  query_expansion.py  server.py  settings.py
pdf_speech_search/static/: app.js  index.html  pcm-worklet.js  styles.css
pdf_speech_search/stt/: __init__.py  nemotron_local.py  whisper_local.py
scripts/: try_nemotron_cpu.py  try_nemotron_cpu.sh
